applications/APP-000017/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: APP-000017
  namespace: testapp

spec:
  selector:
    app: APP-000017

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
