applications/APP-000017/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: APP-000017
  namespace: testapp

spec:
  ingressClassName: nginx

  rules:
  - host: APP-000017.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: APP-000017

            port:
              number: 80
